# bellande_artificial_intelligence_framework

./: Cargo.toml  README.md  dependencies.bellande
scripts/bash/: make_rust_executable.sh  run_bellande_framework.sh
scripts/bellos/: make_rust_executable.bellos
src/: bellande_artificial_intelligence_framework.rs  bellande_artificial_intelligence_training_framework.rs
src/core/: autograd.rs  device.rs  error.rs  tensor.rs
src/data/: augmentation.rs  dataloader.rs  image_decoder.rs  image_folder.rs  image_transformation_augmentation.rs  preprocessing.rs  sampler.rs
src/distributed/: distributed.rs
src/layer/: avgpool2d.rs  batch_norm.rs  conv.rs  dropout.rs  layer_norm.rs  linear.rs  pooling.rs  recurrent.rs  transformer.rs
src/loss/: bce.rs  cross_entropy.rs  mod.rs  mse.rs
src/models/: custom.rs  models.rs  resnet.rs  sequential.rs  vgg.rs
src/optim/: adam.rs  mod.rs  rmsprop.rs  sgd.rs
src/training/: checkpoint.rs  history.rs  trainer.rs  validator.rs
src/utilities/: byte.rs  compression.rs  config.rs  mod.rs  visualization.rs
tests/: integration_test.rs
