[package]
name = "bellande_artificial_intelligence_framework"
version = "0.1.0"
edition = "2021"
authors = ["Bellande Artificial Intelligence Computer Vision Research Innovation (BAICVRI) <ronaldsonbellande@gmail.com>"]
description = """
A comprehensive artificial intelligence and computer vision training framework developed by Bellande AI Research. 
Provides tools and utilities for machine learning model development, training, and deployment.
"""

# Repository Information
repository = "https://github.com/BAICVRI/bellande_artificial_intelligence_framework"
companypage = "https://git.bellande-technologies.com/BAICVRI/bellande_artificial_intelligence_framework"
homepage = "https://github.com/Artificial-Intelligence-Computer-Vision/bellande_artificial_intelligence_framework"

# License Information
license = "GPL-3.0-or-later"
license-file = "LICENSE"

# Keywords and Categories
keywords = ["ai", "machine-learning", "computer-vision", "deep-learning", "framework"]
categories = ["science", "computer-vision", "ai", "machine-learning"]

# Package Metadata
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md"
]

[lib]
name = "bellande_artificial_intelligence_framework"
path = "src/bellande_artificial_intelligence_framework.rs"

[dependencies]
# Core dependencies
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
num_cpus = "1.13"
rayon = "1.5"

# Visualization
plotters = "0.3"

# Optional CUDA support
cudarc = { version = "0.9", optional = true }

glob = "0.3.1"
bincode = "1.3.3"

sys-info = "0.9"
